--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
   font-size: 24px;
   -webkit-text-stroke: 1px black; 
   font-weight: bold;
-  position: relative;
-  z-index: 2;} 
+  position: fixed;
+  z-index: 6;} 
 
 .toolbar {  
 /* New, Save, etc. */
@@ -29,7 +29,7 @@ body {
   text-align: left;  
   margin: 5px;
  /* border: 5px solid lime; */
-  z-index: 5;}
+  z-index: 7;}
   
 .button {
   font-size: 20px;
@@ -42,6 +42,40 @@ body {
 form {
   margin-top: 20px;
 }
+
+/* Reset default margin and padding */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Set the background color and font */
+body {
+  background-color: black;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.textbox-container {
+  position: fixed;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+  z-index: 6;
+ 
+}
+
+textarea {
+  width: 100%;  
+  background-color: black;
+  border: 5px solid lime;
+  color: orange;
+  padding: 5px;
+  resize: none;
+  outline: none;
+  font-size: 20px;
+}
+
 
 label {
   display: block;
