--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@ body {
   background-color: black;
   font-family: Helvetica, Arial, sans-serif;
   color: lime;
+  overflow: hidden;
   /*background-image: url('https://i.pinimg.com/originals/44/e4/63/44e4636259fc47f65feb95c70e22c925.jpg');
   background-size: cover;*/
 }
 
 .title-container{
-  width: 100%;
+  width: 15%;
   text-align: left;
   padding: 20px;
   font-size: 24px;
@@ -150,23 +151,22 @@ button[type="submit"]:hover {
 }
 
 .canvas-container {
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  position: relative;
+  border: 1px solid black;
+ 
 }
 
- 
-
 .canvas {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    
   z-index: 0;
   border: 5px solid lime;
   opacity: 1;
-  
+  cursor: grab;
 }
 
 footer {
